--- a/css/style.css
+++ b/css/style.css
@@ -24,3 +24,14 @@
     transform: var(--state-menu);
     transition: .3s transform;
 }
+
+.nav_item{
+    list-style: none;
+}
+
+.nav_link{
+    color: #fff;
+    text-decoration: none;
+    font-size: 1.2rem;
+    letter-spacing: 2px;
+}
