--- a/css/style.css
+++ b/css/style.css
@@ -5,16 +5,31 @@
     box-shadow: 10px 0px 0px 10px rgba(0, 0, 0, 0.7);
 }
 
+#contenedor_menu{
+    display: flex;
+    justify-content: space-between;
+
+}
+
+#logo_ispi{
+
+}
+
 .cabecera {
-    
     min-height: 500px;
     height: 100vh;
     color: #fff;
+    background-color: rosybrown;
 }
 
 #banner {
     background-image: url(../img/bg1.jpg);
     background-size: cover;
+    position: absolute;
+    z-index: 50;
+    top: 60px;
+    width: 100%;
+    height: 350px;
 }
 
 .nav {
@@ -28,6 +43,24 @@
     grid-template-columns: repeat(2, max-content);
 }
 
+.nav_contenedor{
+    background-color: #333;
+    position: fixed;
+    width: 100%;
+    top: 0;
+    left: 0;
+    height: 60px;
+    z-index: 200;
+}
+
+.principal{
+    background-color: lightblue;
+}
+
+.pie{
+    background-color: yellow;
+}
+
 .nav:target {
     --state-cerrar: scale(1);
     --state-hamburguesa: scale(0);
@@ -35,8 +68,9 @@
 }
 
 .nav_logo{
-    width: 10px;
-    z-index:1;
+    width: 110px;
+    height: 110px;
+    z-index:100;
 }
 
 .nav_hamburguesa,
@@ -81,7 +115,7 @@
 }
 
 .nav_link {
-    color: #fff;
+    color: black;
     text-decoration: none;
     font-size: 1.2rem;
     letter-spacing: 2px;
