--- a/css/style.css
+++ b/css/style.css
@@ -82,6 +82,10 @@
 }
 
 #banner {
+    display: grid;
+    grid-template-columns: repeat(5,1fr);
+    grid-template-rows: repeat(5,1fr);
+    gap: 8px;
     background-image: url(../img/bg1.jpg);
     background-size: cover;
     position: absolute;
@@ -90,6 +94,24 @@
     width: 100%;
     height: 350px;
 }
+
+.div1{
+    grid-column: span 2 / span 2;
+    grid-column-start: 2 ;
+    grid-row-start: 2;
+}
+
+.div2{
+    grid-column: span 3 / span 3;
+    grid-column-start: 2 ;
+    grid-row-start: 3;
+}
+
+.div3{
+    grid-column-start: 3 ;
+    grid-row-start: 3;
+}
+
 
 .nav {
     --state-cerrar: scale(0);
