--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,3 @@
-
-
 #informacion {
     display: flex;
     justify-content: space-between;
@@ -105,7 +103,7 @@
     background-image: url(../img/bg1.jpg);
     background-size: cover;
     z-index: 50;
-    top: 60px;
+    margin-top: 60px;
     width: 100%;
     height: 350px;
 }
