--- a/css/style.css
+++ b/css/style.css
@@ -4,6 +4,10 @@
     /* align-items: flex-end; */
 }
 
+.div1{
+    color: white;
+}
+
 #cotizacion_en_vivo {
     display: grid;
     grid-template-columns: repeat(2, 1fr);
@@ -100,12 +104,15 @@
 }
 
 #banner {
-    background-image: url(../img/bg1.jpg);
-    background-size: cover;
+    background-image: url(https://tse4.mm.bing.net/th/id/OIP.KDGCoKncSC81C5jsk_FiQQHaEZ?r=0&rs=1&pid=ImgDetMain&o=7&rm=3);
+    background-size: contain;
+    background-repeat: no-repeat;
+    background-position: center;
     z-index: 50;
     margin-top: 60px;
-    width: 100%;
+    width: auto;
     height: 350px;
+    color: #000;
 }
 
 .nav {
