--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,6 @@
 #informacion {
     display: flex;
-    justify-content: space-between;
-    /* align-items: flex-end; */
+    justify-content: space-around;
 }
 
 .div1{
@@ -9,13 +8,21 @@
 }
 
 #cotizacion_en_vivo {
-    display: grid;
     grid-template-columns: repeat(2, 1fr);
     gap: 25px;
-    max-width: 1200px;
+    max-width: 600px;
+    max-height: 100px;
+    width: 70%;
     padding: 20px;
 }
 
+.cotizaciones {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    gap: 25px;
+    max-height: 800px;
+    width: 100%;
+}
 
 .cotizacion {
     background: white;
@@ -26,7 +33,8 @@
     box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
     display: flex;
     flex-direction: column;
-    justify-content: space-between;
+    justify-content: space-around;
+    align-items: center;
 }
 
 .par {
