--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,8 @@
-
-
+*{
+    font-family: 'Roboto', sans-serif;
+    margin: 0;
+    box-sizing: border-box;
+}
 
 #informacion {
     display: flex;
