corregido edgardo y lucas

--- a/css/style.css
+++ b/css/style.css
@@ -1,41 +1,68 @@
+*{
+    font-family: 'Roboto', sans-serif;
+    margin: 0;
+    box-sizing: border-box;
+}
+
 #informacion {
     display: flex;
     justify-content: space-around;
 }
 
+/*Información del instituto*/
+
+
 #informacion-titulo {
+    font-family: Roboto, sans-serif;
     display: flex;
     flex-direction: column;
     justify-content: space-around;
     align-items: center;
 }
 
-/*Información del instituto*/
+#informacion-titulo h1 {
+    font-size: 35px;
+}
+
+#informacion-titulo h2 {
+    font-size: 25px;
+}
+
+#informacion-titulo p {
+    font-size: 18px;
+}
 
 .profile-picture {
     display: flex;
     flex-direction: row;
     justify-content: center;
     align-items: flex-start;
-    width: 80%;
+    width: 65%;
     gap: 20px;
 }
 
 .toggle {
     cursor: pointer;
     color: green;
+    display: inline-block;
+    transition: transform 0.5s;
+}
+
+.toggle:hover {
+    transform: scale(1.8);
 }
 
 .bloque {
-    flex: 1;
-    max-width: 50%;
-    flex-direction: column;
-    align-items: center;
     text-align: center;
+}
+
+.bloque img:hover {
+    transform: scale(1.1);
 }
 
 .bloque p {
     align-self: center;
+    text-shadow: 1px 1px 3px rgba(0,0,0,0.2);
 }
 
 .profile-picture h1,
@@ -43,17 +70,6 @@
     text-align: center;
 }
 
-@media (max-width: 768px) {
-    .profile-picture {
-        flex-direction: column;
-        align-items: center;
-    }
-
-    .profile-picture img {
-        width: 70px;
-        height: 70px;
-    }
-}
 
 /*Información del instituto*/
 
