--- a/css/style.css
+++ b/css/style.css
@@ -70,6 +70,17 @@
     text-align: center;
 }
 
+@media (max-width: 768px) {
+    .profile-picture {
+        flex-direction: column;
+        align-items: center;
+    }
+
+    .profile-picture img {
+        width: 70px;
+        height: 70px;
+    }
+}
 
 /*Información del instituto*/
 
