logo dollar y ethereum con css
cambios css js y carpeta img

--- a/css/style.css
+++ b/css/style.css
@@ -143,6 +143,14 @@
     font-size: 2rem;
 }
 
+.logo-cotizacion-img {
+    /* font-size: 2rem; */
+    width: 2rem;
+    height: 2rem;
+    /* object-fit: contain; */
+    vertical-align: middle;
+}
+
 
 .espacio-actualizacion {
     margin-left: 0;
