--- a/css/style.css
+++ b/css/style.css
@@ -261,16 +261,19 @@
 }
 
 #banner {
-    background-image: url('../img/1000325368.jpg');
-    background-size: cover;
-    background-repeat: no-repeat;
-    background-position: center;
-    z-index: 50;
-    margin-top: 60px;
-    width: 100%;
-    height: 350px;
-    color: #000;
+  background-image: url('../img/1000325368.jpg');
+  background-size: cover;
+  background-position: center;
+  width: 100%;
+  height: 350px;
+
+  display: flex;
+  flex-direction: column;
+  justify-content: center; /* centra verticalmente */
+  align-items: center; /* centra horizontalmente */
+  text-align: center;
 }
+
 
 #seccion_banner {
     scroll-margin-top: 60px;
