--- a/css/style.css
+++ b/css/style.css
@@ -269,8 +269,8 @@
 
   display: flex;
   flex-direction: column;
-  justify-content: center; /* centra verticalmente */
-  align-items: center; /* centra horizontalmente */
+  justify-content: center; 
+  align-items: center;
   text-align: center;
 }
 
