--- a/css/style.css
+++ b/css/style.css
@@ -447,6 +447,12 @@ hr {
     margin-top: 10px;
 }
 
+#boton_noticia:active {
+    background-color: #222;
+    box-shadow: 0 8px 20px rgba(0, 0, 0, 0.35);
+    transform: scale(0.98);
+}
+
 
 
 @media (min-width:768px) {
