--- a/css/style.css
+++ b/css/style.css
@@ -610,7 +610,7 @@ hr {
 }
 
 .contacto-info a {
-    color: #1a73e8;
+    color: #000000;
     text-decoration: none;
     transition: color .15s ease;
 }
